# bewise_test

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_20_1558-8525b9047179_initial.py
src/: config.py  main.py
src/api/: __init__.py
src/api/v1/application/: __init__.py  application.py
src/kafka/: producer.py
src/models/: __init__.py  application.py
src/repositories/: application.py
src/schemas/: application.py
src/service/: application.py
src/utils/: custom_types.py  unit_of_work.py
